[gd_scene load_steps=10 format=3 uid="uid://ugag3rg264an"]

[ext_resource type="Script" uid="uid://cl3bk2cw7atsy" path="res://scripts/stats.gd" id="1_3f7q0"]
[ext_resource type="FontFile" uid="uid://blhg73s33pstp" path="res://assets/fonts/OdorMeanChey-Regular.ttf" id="2_fk87l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxilm"]
bg_color = Color(0.752941, 0.85098, 0.866667, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mahjx"]
bg_color = Color(1, 1, 1, 1)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fycn"]
bg_color = Color(0.878431, 0.92549, 0.933333, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kpsoi"]
bg_color = Color(0.752941, 0.85098, 0.866667, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5p8wc"]
bg_color = Color(0.623351, 0.758008, 0.779535, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36l1p"]
bg_color = Color(0.526414, 0.672957, 0.696331, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vc333"]
bg_color = Color(0.752941, 0.85098, 0.866667, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Stats" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 450.0
script = ExtResource("1_3f7q0")

[node name="InvisibleBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Box" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -175.0
offset_right = 175.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TtilePanel" type="Panel" parent="Box"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yxilm")

[node name="Label" type="Label" parent="Box/TtilePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_fonts/font = ExtResource("2_fk87l")
theme_override_font_sizes/font_size = 36
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuPanel" type="Panel" parent="Box"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mahjx")

[node name="Menu1" type="Panel" parent="Box/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4fycn")

[node name="Label" type="Label" parent="Box/MenuPanel/Menu1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Played"
vertical_alignment = 1

[node name="Button" type="Button" parent="Box/MenuPanel/Menu1"]
layout_mode = 0
offset_left = 200.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 50.0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_hover_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_focus_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_pressed_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxFlat_kpsoi")
theme_override_styles/hover = SubResource("StyleBoxFlat_5p8wc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_36l1p")
theme_override_styles/normal = SubResource("StyleBoxFlat_vc333")
text = "0"

[node name="Menu2" type="Panel" parent="Box/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4fycn")

[node name="Label" type="Label" parent="Box/MenuPanel/Menu2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "All Clear"
vertical_alignment = 1

[node name="Button" type="Button" parent="Box/MenuPanel/Menu2"]
layout_mode = 0
offset_left = 200.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 50.0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_hover_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_focus_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_pressed_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxFlat_kpsoi")
theme_override_styles/hover = SubResource("StyleBoxFlat_5p8wc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_36l1p")
theme_override_styles/normal = SubResource("StyleBoxFlat_vc333")
text = "0"

[node name="Menu3" type="Panel" parent="Box/MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 40.0
offset_right = 160.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4fycn")

[node name="Label" type="Label" parent="Box/MenuPanel/Menu3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Best Score"
vertical_alignment = 1

[node name="Button" type="Button" parent="Box/MenuPanel/Menu3"]
layout_mode = 0
offset_left = 200.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 50.0
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_hover_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_focus_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_colors/font_pressed_color = Color(0.101961, 0.588235, 0.666667, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxFlat_kpsoi")
theme_override_styles/hover = SubResource("StyleBoxFlat_5p8wc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_36l1p")
theme_override_styles/normal = SubResource("StyleBoxFlat_vc333")
text = "0"

[connection signal="gui_input" from="InvisibleBG" to="." method="_on_invisible_bg_gui_input"]
[connection signal="pressed" from="Box/MenuPanel/Menu1/Button" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="Box/MenuPanel/Menu2/Button" to="." method="_on_button1_pressed"]
[connection signal="pressed" from="Box/MenuPanel/Menu3/Button" to="." method="_on_button1_pressed"]
